--- a/LaTeX-report/vision.tex
+++ b/LaTeX-report/vision.tex
@@ -13,9 +13,9 @@
 \usepackage{pgfplotstable}
 
 \pgfplotstableread[col sep=comma]{
-y,start,end
-0,0,600
-1,600,1020
+start,end,Name,color
+0,600,fooer,color1
+600,1020,foo2bar,color2
 }\loadedtable
 
 \definecolor{color1}{RGB}{146,200,180}
@@ -48,36 +48,23 @@ Run time: &   \\
 \section*{Execution timeline}
 
 \begin{tikzpicture}
-  %\begin{axis}[title  = Contributions per category
-  %                        at LaTeX-Community.org,
-  %  xbar,
-  %  y axis line style = { opacity = 0 },
-  %  axis x line       = none,
-  %  tickwidth         = 0pt,
-  %  symbolic y coords = {fooer, foo2bar},
-  %  nodes near coords,
-  %]
 \begin{axis}[
-  xbar,
-  y axis line style = { opacity = 0 },
-  axis x line       = none,
-  tickwidth         = 0pt,
-  %ytick=data,   % ytick at every datapoint in the first \addplot
-  %axis on top,  % place axis lines and ticks on top
-  xbar stacked, % means that the bars from the different \addplots are stacked one after the other
-  y dir=reverse % means the y-axis increases downward
+    xbar, xmin=0,
+    y axis line style = { opacity = 0 },
+    tickwidth         = 0pt,
+    width=12cm, height=3.5cm, enlarge y limits=0.5,
+    symbolic y coords={fooer,foo2bar},
+    ytick=data, xbar stacked,
+    bar shift=0pt,
+    y dir=reverse,
+    xtick={1, 500, 1000},
+    xticklabels={1 ms, 500 ms, 1 s}
 ]
-% make an invisible bar from zero to the start-value
-\addplot [draw=none, forget plot] table [col sep=comma,x=start, y=y]{\loadedtable};
-% then add the actual bar, stacked after the invisible one
-% for pgfplots the x-value is the length of the bar, so
-% we calculate end minus start 
-\addplot  +[fill=black,draw=none] table [x expr=\thisrow{end}-\thisrow{start}, y=y] {\loadedtable};
 
-% fill background
-\fill [black!30] (\pgfkeysvalueof{/pgfplots/xmin}, \pgfkeysvalueof{/pgfplots/ymax}) rectangle
-                 (\pgfkeysvalueof{/pgfplots/xmax}, 6.5);
-\end{axis}\end{tikzpicture}
+\addplot [draw=none, forget plot] table [x=end, y=Name]{\loadedtable};
+\addplot+[color1] table [x expr=\thisrow{start}-\thisrow{end}, y=Name]{\loadedtable};
+\end{axis}
+\end{tikzpicture}
 
 % Times
 % 1530175200 2018-06-28 8:40:00.000000000
