Added workflow overview image

--- a/LaTeX-report/vision.tex
+++ b/LaTeX-report/vision.tex
@@ -43,7 +43,13 @@ Run time: &   \\
 \end{tabular}
     \end{tcolorbox}
 
+\vfill
 
+\setlength{\fboxsep}{0pt}
+\noindent
+\hspace{-0.1725\textwidth}\fbox{\includegraphics[width=1.35\textwidth]{cawpre.pdf}}
+\vfill
+\newpage
 
 \section*{Execution timeline}
 
