removed strange artefact

--- a/LaTeX-report/vision.tex
+++ b/LaTeX-report/vision.tex
@@ -65,6 +65,7 @@ Run time: &   \\
     y dir=reverse,
     xtick={1, 500000, 1000000},
     xticklabels={0, 5 min, 10 min},
+    scaled x ticks=false
 ]
 
 
