Some scaling of time line

--- a/LaTeX-report/vision.tex
+++ b/LaTeX-report/vision.tex
@@ -58,10 +58,12 @@ Run time: &   \\
     xbar, xmin=0,
     y axis line style = { opacity = 0 },
     tickwidth         = 0pt,
-    width=12cm, height=3.5cm, enlarge y limits=0.5,
+    width=\textwidth,
     symbolic y coords={fooer,foo2bar},
     ytick=data,
     bar shift=0pt,
+    y=0.6cm,
+    bar width=0.5cm,
     y dir=reverse,
     xtick={1, 500000, 1000000},
     xticklabels={0, 5 min, 10 min},
