--- a/LaTeX-report/vision.tex
+++ b/LaTeX-report/vision.tex
@@ -26,7 +26,7 @@ start,end,Name,color
 \noindent
 \begin{minipage}{\textwidth}
     \vspace{-8em}\hspace{-8em}
-    \includegraphics[width=9em]{images/scipipe_logo_bluegrey.pdf}
+    \includegraphics[width=9em]{images/scipipe_logo_bluegrey.png}
 \end{minipage}
 
 \noindent 
@@ -47,7 +47,7 @@ Run time: &   \\
 
 \setlength{\fboxsep}{0pt}
 \noindent
-\hspace{-0.1725\textwidth}\fbox{\includegraphics[width=1.35\textwidth]{cawpre.pdf}}
+\hspace{-0.1725\textwidth}\fbox{\includegraphics[width=1.35\textwidth]{images/cawpre.pdf}}
 \vfill
 \newpage
 
